# shrike

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-DUAL  PUBLISHING.md  README.md  justfile  lexgen.json
crates/ratproto/: Cargo.toml
crates/ratproto-api/: Cargo.toml
crates/ratproto-api/src/: lib.rs
crates/ratproto-api/src/app/bsky/: actor_defs.rs  actor_get_preferences.rs  actor_get_profile.rs  actor_get_profiles.rs  actor_get_suggestions.rs  actor_profile.rs  actor_put_preferences.rs  actor_search_actors.rs  actor_search_actors_typeahead.rs  actor_status.rs  ageassurance_begin.rs  ageassurance_defs.rs  ageassurance_get_config.rs  ageassurance_get_state.rs  bookmark_create_bookmark.rs  bookmark_defs.rs  bookmark_delete_bookmark.rs  bookmark_get_bookmarks.rs  contact_defs.rs  contact_dismiss_match.rs  contact_get_matches.rs  contact_get_sync_status.rs  contact_import_contacts.rs  contact_remove_data.rs  contact_send_notification.rs  contact_start_phone_verification.rs  feed_defs.rs  (+118 more)
crates/ratproto-api/tests/: cbor_roundtrip.rs
crates/ratproto-backfill/: Cargo.toml
crates/ratproto-backfill/src/: engine.rs  lib.rs
crates/ratproto-car/: Cargo.toml
crates/ratproto-car/benches/: car_bench.rs
crates/ratproto-car/benches/fixtures/: calabro.car
crates/ratproto-car/fuzz/: Cargo.toml
crates/ratproto-car/fuzz/fuzz_targets/: fuzz_car_reader.rs  fuzz_car_roundtrip.rs
crates/ratproto-car/src/: lib.rs  reader.rs  writer.rs
crates/ratproto-crypto/: Cargo.toml
crates/ratproto-crypto/fuzz/: Cargo.toml
crates/ratproto-crypto/fuzz/fuzz_targets/: fuzz_k256_public_bytes.rs  fuzz_p256_public_bytes.rs  fuzz_parse_did_key.rs
crates/ratproto-crypto/src/: lib.rs  p256_impl.rs  signature.rs
crates/ratproto-identity/: Cargo.toml
crates/ratproto-identity/src/: did_web.rs  directory.rs  identity.rs  lib.rs  plc.rs
crates/ratproto-labeling/: Cargo.toml
crates/ratproto-labeling/src/: lib.rs
crates/ratproto-lexicon/: Cargo.toml
crates/ratproto-lexicon/fuzz/: Cargo.toml
crates/ratproto-lexicon/fuzz/fuzz_targets/: fuzz_parse_schema.rs  fuzz_validate_record.rs
crates/ratproto-lexicon/src/: catalog.rs  lib.rs  validate.rs
crates/ratproto-mst/: Cargo.toml
crates/ratproto-mst/benches/: mst_bench.rs
crates/ratproto-mst/fuzz/: Cargo.toml
crates/ratproto-mst/fuzz/fuzz_targets/: fuzz_decode_node_data.rs  fuzz_height_for_key.rs  fuzz_node_data_roundtrip.rs  fuzz_tree_ops.rs
crates/ratproto-mst/src/: block_store.rs  diff.rs  lib.rs  node.rs  tree.rs
crates/ratproto-mst/tests/: property_tests.rs
crates/ratproto-oauth/: Cargo.toml
crates/ratproto-oauth/fuzz/: Cargo.toml
crates/ratproto-oauth/fuzz/fuzz_targets/: fuzz_dpop_proof.rs  fuzz_parse_as_metadata.rs  fuzz_parse_token_response.rs
crates/ratproto-oauth/src/: client.rs  client_auth.rs  dpop.rs  jwk.rs  lib.rs  session.rs  token.rs  transport.rs
crates/ratproto-oauth/tests/: integration.rs
crates/ratproto-repo/: Cargo.toml
crates/ratproto-repo/benches/: repo_bench.rs
crates/ratproto-repo/src/: commit.rs  lib.rs  repo.rs
crates/ratproto-sync/: Cargo.toml
crates/ratproto-sync/src/: client.rs  lib.rs  verify.rs
crates/ratproto-syntax/: Cargo.toml
crates/ratproto-syntax/fuzz/: Cargo.toml
crates/ratproto-syntax/fuzz/fuzz_targets/: fuzz_at_identifier.rs  fuzz_aturi.rs  fuzz_datetime.rs  fuzz_did.rs  fuzz_handle.rs  fuzz_language.rs  fuzz_nsid.rs  fuzz_recordkey.rs  fuzz_tid.rs
crates/ratproto-syntax/src/: aturi.rs  nsid.rs  recordkey.rs  tid.rs
crates/ratproto-syntax/testdata/: did_syntax_invalid.txt
crates/ratproto-xrpc/: Cargo.toml
crates/ratproto-xrpc-server/: Cargo.toml
crates/ratproto-xrpc-server/src/: context.rs  error.rs  server.rs
crates/ratproto-xrpc/src/: auth.rs  client.rs
crates/ratproto/src/: lib.rs
crates/shrike/: Cargo.toml
crates/shrike-api/: Cargo.toml
crates/shrike-api/src/: lib.rs
crates/shrike-api/src/com/: mod.rs
crates/shrike-api/src/tools/: mod.rs
crates/shrike-api/tests/: cbor_roundtrip.rs
crates/shrike-backfill/: Cargo.toml
crates/shrike-backfill/src/: checkpoint.rs  lib.rs
crates/shrike-car/: Cargo.toml
crates/shrike-car/benches/: car_bench.rs
crates/shrike-car/fuzz/: Cargo.toml
crates/shrike-car/fuzz/fuzz_targets/: fuzz_car_reader.rs  fuzz_car_roundtrip.rs
crates/shrike-car/src/: lib.rs  reader.rs  writer.rs
crates/shrike-cbor/: Cargo.toml
crates/shrike-cbor/benches/: cbor_bench.rs
crates/shrike-cbor/benches/fixtures/: record_profile.cbor
crates/shrike-cbor/fuzz/: Cargo.toml
crates/shrike-cbor/fuzz/fuzz_targets/: fuzz_cid_bytes.rs  fuzz_cid_string.rs  fuzz_drisl_roundtrip.rs  fuzz_varint.rs
crates/shrike-cbor/src/: bump.rs  decode.rs  lib.rs  varint.rs
crates/shrike-cbor/tests/: property_tests.rs
crates/shrike-identity/: Cargo.toml
crates/shrike-identity/src/: did_web.rs  directory.rs  identity.rs  lib.rs  plc.rs
crates/shrike-labeling/: Cargo.toml
crates/shrike-labeling/src/: lib.rs
crates/shrike-lexicon/: Cargo.toml
crates/shrike-lexicon/fuzz/: Cargo.toml
crates/shrike-lexicon/fuzz/fuzz_targets/: fuzz_parse_schema.rs  fuzz_validate_record.rs
crates/shrike-lexicon/src/: schema.rs  validate.rs
crates/shrike-oauth/: Cargo.toml
crates/shrike-oauth/fuzz/: Cargo.toml
crates/shrike-oauth/fuzz/fuzz_targets/: fuzz_dpop_proof.rs  fuzz_parse_as_metadata.rs  fuzz_parse_token_response.rs
crates/shrike-oauth/src/: client.rs  client_auth.rs  dpop.rs  jwk.rs  lib.rs  metadata.rs  pkce.rs  session.rs  token.rs  transport.rs
crates/shrike-oauth/tests/: integration.rs
crates/shrike-repo/: Cargo.toml
crates/shrike-repo/benches/: repo_bench.rs
crates/shrike-repo/src/: commit.rs  lib.rs  repo.rs
crates/shrike-streaming/: Cargo.toml
crates/shrike-streaming/src/: client.rs  event.rs  jetstream.rs  lib.rs
crates/shrike-sync/: Cargo.toml
crates/shrike-sync/src/: client.rs  lib.rs  verify.rs
crates/shrike-xrpc/: Cargo.toml
crates/shrike-xrpc-server/: Cargo.toml
crates/shrike-xrpc-server/src/: context.rs  lib.rs
crates/shrike-xrpc/src/: auth.rs  client.rs  error.rs  lib.rs
crates/shrike/src/: lib.rs
(+1004 files in other folders)
