[workspace]
resolver = "2"
members = [
    "crates/ratproto-syntax",
    "crates/ratproto-cbor",
    "crates/ratproto-crypto",
    "crates/ratproto-mst",
    "crates/ratproto-repo",
    "crates/ratproto-car",
    "crates/ratproto-lexicon",
    "crates/ratproto-xrpc",
    "crates/ratproto-xrpc-server",
    "crates/ratproto-identity",
    "crates/ratproto-streaming",
    "crates/ratproto-sync",
    "crates/ratproto-backfill",
    "crates/ratproto-labeling",
    "crates/ratproto-oauth",
    "crates/ratproto-api",
    "crates/ratproto",
    "tools/lexgen",
    "tools/rat",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcalabro/ratproto"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
data-encoding = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
bs58 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
axum = "0.8"
http = "1"
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.9"
url = "2"
async-trait = "0.1"
