[workspace]
resolver = "2"
members = [
    "crates/shrike-syntax",
    "crates/shrike-cbor",
    "crates/shrike-crypto",
    "crates/shrike-mst",
    "crates/shrike-repo",
    "crates/shrike-car",
    "crates/shrike-lexicon",
    "crates/shrike-xrpc",
    "crates/shrike-xrpc-server",
    "crates/shrike-identity",
    "crates/shrike-streaming",
    "crates/shrike-sync",
    "crates/shrike-backfill",
    "crates/shrike-labeling",
    "crates/shrike-oauth",
    "crates/shrike-api",
    "crates/shrike",
    "tools/lexgen",
    "tools/shrike",  # CLI tool (binary name: shrike)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcalabro/shrike"
homepage = "https://github.com/jcalabro/shrike"
documentation = "https://docs.rs/shrike"
authors = ["Jim Calabro <jim@calabro.io>"]
keywords = ["atproto", "bluesky", "at-protocol", "distributed"]
categories = ["api-bindings", "network-programming"]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
data-encoding = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
bs58 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
axum = "0.8"
http = "1"
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.9"
url = "2"
async-trait = "0.1"
