[package]
name = "ratproto-backfill"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol concurrent repo backfill engine"

[lints]
workspace = true

[dependencies]
ratproto-syntax = { path = "../ratproto-syntax" }
ratproto-sync = { path = "../ratproto-sync" }
ratproto-xrpc = { path = "../ratproto-xrpc" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rand.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
