[package]
name = "ratproto-car"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol CAR v1 file reader and writer"

[lints]
workspace = true

[dependencies]
ratproto-cbor = { path = "../ratproto-cbor" }
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "car_bench"
harness = false
