[package]
name = "ratproto-labeling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol label creation and verification"

[lints]
workspace = true

[dependencies]
ratproto-syntax = { path = "../ratproto-syntax" }
ratproto-cbor = { path = "../ratproto-cbor" }
ratproto-crypto = { path = "../ratproto-crypto" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
