[package]
name = "ratproto-mst"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol Merkle Search Tree"

[lints]
workspace = true

[dependencies]
ratproto-cbor = { path = "../ratproto-cbor" }
thiserror.workspace = true
sha2.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "mst_bench"
harness = false
