[package]
name = "ratproto-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol OAuth 2.0 client — PKCE, DPoP, PAR"

[lints]
workspace = true

[dependencies]
ratproto-syntax = { path = "../ratproto-syntax" }
ratproto-crypto = { path = "../ratproto-crypto" }
ratproto-identity = { path = "../ratproto-identity" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
data-encoding.workspace = true
rand.workspace = true
url.workspace = true
async-trait.workspace = true
p256.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
ratproto-crypto = { path = "../ratproto-crypto" }
data-encoding.workspace = true
sha2.workspace = true
serde_json.workspace = true
url.workspace = true
