[package]
name = "ratproto-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol syntax types — DID, Handle, NSID, AT-URI, TID, Datetime"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
