[package]
name = "ratproto-xrpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol XRPC HTTP client"

[lints]
workspace = true

[dependencies]
ratproto-syntax = { path = "../ratproto-syntax" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
axum = "0.8"
