[package]
name = "ratproto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol library for Rust"

[lints]
workspace = true

[features]
default = ["syntax", "cbor", "crypto", "mst", "repo", "car"]
syntax = ["dep:ratproto-syntax"]
cbor = ["dep:ratproto-cbor"]
crypto = ["dep:ratproto-crypto"]
mst = ["dep:ratproto-mst"]
repo = ["dep:ratproto-repo"]
car = ["dep:ratproto-car"]
lexicon = ["dep:ratproto-lexicon"]
xrpc = ["dep:ratproto-xrpc"]
xrpc-server = ["dep:ratproto-xrpc-server"]
identity = ["dep:ratproto-identity"]
streaming = ["dep:ratproto-streaming"]
sync = ["dep:ratproto-sync"]
backfill = ["dep:ratproto-backfill"]
labeling = ["dep:ratproto-labeling"]
api = ["dep:ratproto-api"]
full = ["syntax", "cbor", "crypto", "mst", "repo", "car", "lexicon", "xrpc", "xrpc-server", "identity", "streaming", "sync", "backfill", "labeling", "api"]

[dependencies]
ratproto-syntax = { path = "../ratproto-syntax", optional = true }
ratproto-cbor = { path = "../ratproto-cbor", optional = true }
ratproto-crypto = { path = "../ratproto-crypto", optional = true }
ratproto-mst = { path = "../ratproto-mst", optional = true }
ratproto-repo = { path = "../ratproto-repo", optional = true }
ratproto-car = { path = "../ratproto-car", optional = true }
ratproto-lexicon = { path = "../ratproto-lexicon", optional = true }
ratproto-xrpc = { path = "../ratproto-xrpc", optional = true }
ratproto-xrpc-server = { path = "../ratproto-xrpc-server", optional = true }
ratproto-identity = { path = "../ratproto-identity", optional = true }
ratproto-streaming = { path = "../ratproto-streaming", optional = true }
ratproto-sync = { path = "../ratproto-sync", optional = true }
ratproto-backfill = { path = "../ratproto-backfill", optional = true }
ratproto-labeling = { path = "../ratproto-labeling", optional = true }
ratproto-api = { path = "../ratproto-api", optional = true }
