[package]
name = "shrike-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generated AT Protocol API types from Lexicon schemas"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax" }
shrike-cbor = { path = "../shrike-cbor" }
shrike-xrpc = { path = "../shrike-xrpc" }
serde.workspace = true
serde_json.workspace = true
