[package]
name = "shrike-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generated AT Protocol API types from Lexicon schemas"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax", version = "0.1.0" }
shrike-cbor = { path = "../shrike-cbor", version = "0.1.0" }
shrike-xrpc = { path = "../shrike-xrpc", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
