[package]
name = "shrike-backfill"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol concurrent repo backfill engine"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax", version = "0.1.0" }
shrike-sync = { path = "../shrike-sync", version = "0.1.0" }
shrike-xrpc = { path = "../shrike-xrpc", version = "0.1.0" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rand.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
