[package]
name = "shrike-cbor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DRISL (DASL deterministic CBOR) codec and CID for AT Protocol"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
sha2.workspace = true
data-encoding.workspace = true
serde.workspace = true
simdutf8 = "0.1"
bumpalo = "3"

[dev-dependencies]
serde_json.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "cbor_bench"
harness = false
