[package]
name = "shrike-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol identity resolution — DID documents, handle verification"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax" }
shrike-crypto = { path = "../shrike-crypto" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
