[package]
name = "shrike-labeling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol label creation and verification"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax" }
shrike-cbor = { path = "../shrike-cbor" }
shrike-crypto = { path = "../shrike-crypto" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
