[package]
name = "shrike-labeling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol label creation and verification"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax", version = "0.1.0" }
shrike-cbor = { path = "../shrike-cbor", version = "0.1.0" }
shrike-crypto = { path = "../shrike-crypto", version = "0.1.0" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
