[package]
name = "shrike-lexicon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol Lexicon schema parsing and record validation"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
