[package]
name = "shrike-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol OAuth 2.0 client — PKCE, DPoP, PAR"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax", version = "0.1.0" }
shrike-crypto = { path = "../shrike-crypto", version = "0.1.0" }
shrike-identity = { path = "../shrike-identity", version = "0.1.0" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
data-encoding.workspace = true
rand.workspace = true
url.workspace = true
async-trait.workspace = true
p256.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
shrike-crypto = { path = "../shrike-crypto", version = "0.1.0" }
data-encoding.workspace = true
sha2.workspace = true
serde_json.workspace = true
url.workspace = true
