[package]
name = "shrike-xrpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol XRPC HTTP server framework"

[lints]
workspace = true

[dependencies]
shrike-syntax = { path = "../shrike-syntax" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
http.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tower = "0.5"
http-body-util = "0.1"
