[package]
name = "shrike"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol library for Rust"

[lints]
workspace = true

[features]
default = ["syntax", "cbor", "crypto", "mst", "repo", "car"]
syntax = ["dep:shrike-syntax"]
cbor = ["dep:shrike-cbor"]
crypto = ["dep:shrike-crypto"]
mst = ["dep:shrike-mst"]
repo = ["dep:shrike-repo"]
car = ["dep:shrike-car"]
lexicon = ["dep:shrike-lexicon"]
xrpc = ["dep:shrike-xrpc"]
xrpc-server = ["dep:shrike-xrpc-server"]
identity = ["dep:shrike-identity"]
streaming = ["dep:shrike-streaming"]
sync = ["dep:shrike-sync"]
backfill = ["dep:shrike-backfill"]
labeling = ["dep:shrike-labeling"]
api = ["dep:shrike-api"]
full = ["syntax", "cbor", "crypto", "mst", "repo", "car", "lexicon", "xrpc", "xrpc-server", "identity", "streaming", "sync", "backfill", "labeling", "api"]

[dependencies]
shrike-syntax = { path = "../shrike-syntax", version = "0.1.0", optional = true }
shrike-cbor = { path = "../shrike-cbor", version = "0.1.0", optional = true }
shrike-crypto = { path = "../shrike-crypto", version = "0.1.0", optional = true }
shrike-mst = { path = "../shrike-mst", version = "0.1.0", optional = true }
shrike-repo = { path = "../shrike-repo", version = "0.1.0", optional = true }
shrike-car = { path = "../shrike-car", version = "0.1.0", optional = true }
shrike-lexicon = { path = "../shrike-lexicon", version = "0.1.0", optional = true }
shrike-xrpc = { path = "../shrike-xrpc", version = "0.1.0", optional = true }
shrike-xrpc-server = { path = "../shrike-xrpc-server", version = "0.1.0", optional = true }
shrike-identity = { path = "../shrike-identity", version = "0.1.0", optional = true }
shrike-streaming = { path = "../shrike-streaming", version = "0.1.0", optional = true }
shrike-sync = { path = "../shrike-sync", version = "0.1.0", optional = true }
shrike-backfill = { path = "../shrike-backfill", version = "0.1.0", optional = true }
shrike-labeling = { path = "../shrike-labeling", version = "0.1.0", optional = true }
shrike-api = { path = "../shrike-api", version = "0.1.0", optional = true }
